--- a/app/views/prototypes/itp2/staff-totals.html
+++ b/app/views/prototypes/itp2/staff-totals.html
@@ -47,7 +47,7 @@ Include part-time staff.
       </li><br>
     
       <li class="browse-list-item">
-        <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Teachers or trainers</h2>
+        <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Teachers</h2>
         
         
           <p class="browse-list-item-subtext">
