--- a/app/views/prototypes/itp2/role.html
+++ b/app/views/prototypes/itp2/role.html
@@ -75,14 +75,7 @@
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
           Mentor, assessor, technician, teaching assistant
         </span>
-      </div><br>
-
-       <br>
-
-
-      
-      
-
+      </div>
 
     </div>
   </fieldset>
