--- a/app/views/prototypes/itp2/role.html
+++ b/app/views/prototypes/itp2/role.html
@@ -52,7 +52,7 @@
         
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Principal, vice-principal, director, CEO
+          Senior or middle manager, principal, vice-principal, working director, CEO
         </span>
       </div><br>
 
@@ -62,7 +62,7 @@
           Teacher
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Tutor, trainer, instructor
+          Those that teach or train as part of their role
         </span>
       </div><br>
 
@@ -73,7 +73,7 @@
         </label>
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Mentor, assessor, technician, teaching assistant
+          Mentor, assessor, technician, teaching assistant or in a learning support role
         </span>
       </div>
 
