--- a/app/views/prototypes/itp2/role.html
+++ b/app/views/prototypes/itp2/role.html
@@ -62,7 +62,7 @@
           Teacher
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Those that teach or train as part of their role
+          Staff who deliver teaching or training as part of their role
         </span>
       </div><br>
 
