--- a/app/views/prototypes/itp2/teaching-qualification.html
+++ b/app/views/prototypes/itp2/teaching-qualification.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Do they have professional status?
+        Do they have professional teaching status?
       </h1>
     </legend><br>
     
@@ -71,7 +71,7 @@
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
-            Status
+            Teaching status
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
