--- a/app/views/prototypes/itp2/staff-totals.html
+++ b/app/views/prototypes/itp2/staff-totals.html
@@ -51,7 +51,7 @@ Include part-time staff.
         
         
           <p class="browse-list-item-subtext">
-            Staff who teach or train as part of their role</p>
+            Staff who teach or train as the main part of their job</p>
           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
       </li><br>
     
@@ -59,16 +59,26 @@ Include part-time staff.
         <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Support</h2>
 
         <p class="browse-list-item-subtext">
-            Mentors, assessors, technicians, teaching assistants or anyone in a learning support role<a href="#"></a>
+            Mentors, assessors, technicians, teaching assistants or anyone in a learning support role
+          </p>
+           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+        
+      </li><br>
+
+      <li class="browse-list-item">
+        <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Apprentices</h2>
+
+        <p class="browse-list-item-subtext">
+            Apprentices employed under an apprenticeship contract
           </p>
            <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
         
       </li>
     
   </ul>
-</div><br>
+</div><br><br>
 
-          <a href="many-vacancies" class="govuk-button show-continue" style="display: inline;">
+          <a href="cpd" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a><br>
        
