--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,16 +10,14 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds"><br>
       <h1 class="govuk-heading-xl">
-        FE workforce data collection
+        Manage Learner Record Services applications
         <span class="govuk-caption-xl">{{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
-      <p>
-        Prototypes
-      </p>
+      
 
-      <h2 class="govuk-heading-m">Questions together in one flow</h2>
+      <h2 class="govuk-heading-m">Start</h2>
 
-      <p>Small ITP flow - <a href="/prototypes/small-itp/details">Start</a>
+      <p>Start- <a href="/prototypes/small-itp/details">Start</a>
       </p><br>
       
 
