--- a/app/views/prototypes/itp2/confirmation-provider.html
+++ b/app/views/prototypes/itp2/confirmation-provider.html
@@ -29,35 +29,36 @@
   
             
 
-  <div class="govuk-width-container">
-  <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
+<h1 class="govuk-heading-m">Impact Training Limited
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+
+  <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-panel govuk-panel--confirmation">
-          <h1 class="govuk-panel__title">
-           You have submitted your provider information
-          </h1>
-          <div class="govuk-panel__body">
-            Your reference number<br><strong>HDJ2123F</strong>
-          </div>
-        </div>
-
-        <p class="govuk-body"></p>
-
-        <h2 class="govuk-heading-m">You need to submit your <a href="start-staff-second" class="govuk-link">staff information</a></h2>
-
         
-       <!-- <p class="govuk-body">
-          You have submitted your provider information. You also need to submit your staff information.
-        </p>-->
+          <div class="govuk-form-group">
 
-        <p class="govuk-body">
-          <a href="#" class="govuk-link">What did your think of this service?</a> (takes 30 seconds)
-        </p>
+            <h1 class="govuk-heading-xl">
+              You have submitted your provider information
+</h1>
+
+            
+<h2 class="govuk-heading-m">
+  You need to complete your individual staff information.
+</h2><br>
+
+ 
+
+
+
+
+          <a href="start-staff" class="govuk-button show-continue" style="display: inline;">
+      Back to start
+    </a>
+       
       </div>
     </div>
   </main>
-</div>
 </div>
 
 
