changes to submit org

--- a/app/views/prototypes/itp2/confirmation-provider.html
+++ b/app/views/prototypes/itp2/confirmation-provider.html
@@ -43,18 +43,13 @@
 </h1>
 
             
-<h2 class="govuk-heading-m">
+<h2 class="govuk-heading-s">
   You need to complete your individual staff information.
 </h2><br>
 
- 
 
 
-
-
-          <a href="start-staff" class="govuk-button show-continue" style="display: inline;">
-      Back to start
-    </a>
+<h2 class="govuk-heading-m">Return to your <a href="start-staff-second" class="govuk-link">start page</a></h2>
        
       </div>
     </div>
