--- a/app/views/prototypes/itp2/start-staff.html
+++ b/app/views/prototypes/itp2/start-staff.html
@@ -30,39 +30,36 @@
 
         
 
-      <table class="govuk-table">
-
-      <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-    
-      <th class="govuk-table__header" scope="col"></th>
-
-      <th class="govuk-table__header" scope="col"></th>
-      <th class="govuk-table__header" scope="col"></th>
-    </tr>
-</thead>
-
-
-
-<tbody class="govuk-table__body">
-  <tr class="govuk-table__row">
-    
-    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="staff-totals">About my organisation</a>
-        </td>
-    <td class="govuk-table__cell" scope="row"> </td>
-   <!-- <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Submitted</strong></td>-->
-  </tr>
-  <tr class="govuk-table__row">
-    
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">My staff</a></td>
-    <td class="govuk-table__cell" scope="row">       </td>
-    <td class="govuk-table__cell"><a href="#"></a></td>
-  </tr>
-  
-
-
-</tbody>
-</table> 
+        <table class="govuk-table">
+          <!-- <caption class="govuk-table__caption">Older versions of the ILR FileMerge tool</caption> -->
+          <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+              
+              <th class="govuk-table__header" scope="col"></th>
+          
+              <th class="govuk-table__header" scope="col"></th>
+              <th class="govuk-table__header" scope="col"></th>
+            </tr>
+          </thead>
+          <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+              
+              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="staff-totals">About my organisation</a>
+                  </td>
+              <td class="govuk-table__cell" scope="row"> </td>
+              <td class="govuk-table__cell"></td>
+            </tr>
+            <tr class="govuk-table__row">
+              
+              <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">My staff</a></td>
+              <td class="govuk-table__cell" scope="row">       </td>
+              <td class="govuk-table__cell"></td>
+            </tr>
+            
+          
+          
+          </tbody>
+          </table> 
       
         
 
