--- a/app/views/index.html
+++ b/app/views/index.html
@@ -99,6 +99,12 @@
 
       <p>ITP flow - <a href="/prototypes/itp2/details">Start</a>
       </p>
+      <br><br>
+
+      <h2 class="govuk-heading-m">UR feedback vacancies</h2>
+
+      <p>Flow with form option - <a href="/prototypes/itp3/details">Start</a>
+      </p>
 
       <br><br>
 
