--- a/app/views/prototypes/itp3/explain.html
+++ b/app/views/prototypes/itp3/explain.html
@@ -35,33 +35,16 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Were there subjects that you struggled to find teachers for?
+        Can you explain why?
       </h1>
     </legend><br>
 
     <div class="govuk-form-group">
-      <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          
-        </legend>
-        <!--<div id="changed-name-hint" class="govuk-hint">
-          This includes changing your last name or spelling your name differently.
-        </div>-->
-        <div class="govuk-radios govuk-radios--inline">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
-            <label class="govuk-label govuk-radios__label" for="changed-name">
-              Yes
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-            <label class="govuk-label govuk-radios__label" for="changed-name-2">
-              No
-            </label>
-          </div>
-        </div>
-      </fieldset>
+      
+      <!--<div id="more-detail-hint" class="govuk-hint">
+        Do not include personal or financial information, like your National Insurance number or credit card details.
+      </div>-->
+      <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
     </div>
  
 
@@ -71,7 +54,7 @@
 
 
 
-          <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-provider.html" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
