--- a/app/views/prototypes/itp3/teachers.html
+++ b/app/views/prototypes/itp3/teachers.html
@@ -26,7 +26,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  How many staff did you employ in the 2020/2021 academic year?
+  How many teachers did you employ?
 </h1>
 
             
@@ -37,19 +37,22 @@ Include part-time staff.
 
 
 
-<form action="/form-handler" method="post" novalidate>
-  <div class="govuk-form-group">
+  <ul class="browse-list">
     
-    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" (£)>
-  </div>
+      <li class="browse-list-item">
+      
+        
+          <p class="browse-list-item-subtext">
+            Staff who teach or train as the main part of their job</p>
+          <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+      </li><br>
+    
+  </ul>
+</div>
 
-  
-</form>
-</div><br>
-
-          <a href="teachers" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
-    </a><br>
+          <a href="cpd" class="govuk-button show-continue" style="display: inline;">
+      Continue
+    </a>
        
       </div>
     </div>
