--- a/app/views/prototypes/itp3/cpd.html
+++ b/app/views/prototypes/itp3/cpd.html
@@ -29,7 +29,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Do you record how much time staff spend on Continuous Professional Development (CPD)?
+        Do you record how much time they spend on Continuous Professional Development (CPD)?
       </h1>
     </legend><br>
     
