--- a/app/views/prototypes/itp3/explain.html
+++ b/app/views/prototypes/itp3/explain.html
@@ -41,9 +41,17 @@
 
     <div class="govuk-form-group">
       
-      <!--<div id="more-detail-hint" class="govuk-hint">
-        Do not include personal or financial information, like your National Insurance number or credit card details.
-      </div>-->
+      <div id="more-detail-hint" class="govuk-hint">
+        Hairdressing
+      </div>
+      <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
+    </div><br>
+
+    <div class="govuk-form-group">
+      
+      <div id="more-detail-hint" class="govuk-hint">
+        Hairdressing
+      </div>
       <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
     </div>
  
