--- a/app/views/prototypes/itp3/explain.html
+++ b/app/views/prototypes/itp3/explain.html
@@ -42,7 +42,7 @@
     <div class="govuk-form-group">
       
       <div id="more-detail-hint" class="govuk-hint">
-        Hairdressing
+        Hair and Beauty
       </div>
       <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
     </div><br>
@@ -50,7 +50,7 @@
     <div class="govuk-form-group">
       
       <div id="more-detail-hint" class="govuk-hint">
-        Hairdressing
+        Construction
       </div>
       <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
     </div>
