more changes to vacancies

--- a/app/views/prototypes/itp3/answers-provider.html
+++ b/app/views/prototypes/itp3/answers-provider.html
@@ -33,7 +33,7 @@
 
         <h1 class="govuk-heading-xl">Check your answers</h1>
 
-        <h2 class="govuk-heading-m">Staff</h2>
+        <h2 class="govuk-heading-m">Staff totals</h2>
         
 
        
@@ -41,10 +41,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Managers
+              All staff
             </dt>
             <dd class="govuk-summary-list__value">
-              10
+              100
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -59,7 +59,7 @@
               Teachers
             </dt>
             <dd class="govuk-summary-list__value">
-              100
+              50
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -70,10 +70,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Support
+             CPD
             </dt>
             <dd class="govuk-summary-list__value">
-           10
+           Yes
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -96,26 +96,13 @@
 
 
         
-           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Managers
-            </dt>
-            <dd class="govuk-summary-list__value">
-              More than 10
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
+           
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teachers
+              Teacher vacancies
             </dt>
             <dd class="govuk-summary-list__value">
-              1 - 5
+             2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -126,10 +113,10 @@
 
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Support
+             Not filled
             </dt>
             <dd class="govuk-summary-list__value">
-              1 - 5
+              1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -140,10 +127,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              How many
+              Struggled
             </dt>
             <dd class="govuk-summary-list__value">
-              Don't know
+              Yes
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -154,10 +141,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Time to fill
+              Subjects
             </dt>
             <dd class="govuk-summary-list__value">
-              Don't know
+              Construction, Hair and Beauty
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -168,10 +155,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficulty
+              Construction
             </dt>
             <dd class="govuk-summary-list__value">
-             Academic teaching
+             Level one and two were very hard to...
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -182,10 +169,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Academic
+              Hair and Beauty
             </dt>
             <dd class="govuk-summary-list__value">
-             History, Spanish
+             Find it hard at level three and four but thats because you can earn more as a hairdresser...
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -194,7 +181,7 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
+          <!--<div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Vocational
             </dt>
@@ -206,7 +193,7 @@
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
-          </div>
+          </div>-->
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
