--- a/app/views/prototypes/itp3/confirmation-provider.html
+++ b/app/views/prototypes/itp3/confirmation-provider.html
@@ -39,7 +39,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-              You have submitted your provider information
+              You have successfully submitted your provider information
 </h1>
 
             
