--- a/app/views/prototypes/itp3/explain.html
+++ b/app/views/prototypes/itp3/explain.html
@@ -35,7 +35,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Can you explain why?
+        Can you explain why you found it hard?
       </h1>
     </legend><br>
 
