--- a/app/views/prototypes/itp3/explain.html
+++ b/app/views/prototypes/itp3/explain.html
@@ -35,23 +35,23 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Can you explain why you found it hard?
+        Why did you find it hard?
       </h1>
     </legend><br>
 
     <div class="govuk-form-group">
       
-      <div id="more-detail-hint" class="govuk-hint">
+      <p>
         Hair and Beauty
-      </div>
+      </p>
       <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
     </div><br>
 
     <div class="govuk-form-group">
       
-      <div id="more-detail-hint" class="govuk-hint">
+      <p>
         Construction
-      </div>
+      </p>
       <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
     </div>
  
