--- a/app/views/prototypes/itp3/staff-totals.html
+++ b/app/views/prototypes/itp3/staff-totals.html
@@ -31,7 +31,7 @@
 
             
 <p>
-  Include roles filled with tempoary staff but not agency workers.
+  Include roles filled with temporary staff but not agency workers.
 Include part-time staff.
 </p>
 
