--- a/app/views/prototypes/itp3/cpd.html
+++ b/app/views/prototypes/itp3/cpd.html
@@ -58,7 +58,7 @@
 
 
 
-          <a href="many-vacancies.html" class="govuk-button show-continue" style="display: inline;">
+          <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
