apprentices answers page

--- a/app/views/prototypes/itp3/answers-provider.html
+++ b/app/views/prototypes/itp3/answers-provider.html
@@ -83,6 +83,21 @@
           </div>
 
 
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+             Apprentices
+            </dt>
+            <dd class="govuk-summary-list__value">
+           3
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+
           
 
 
@@ -158,7 +173,7 @@
               Construction
             </dt>
             <dd class="govuk-summary-list__value">
-             Level one and two were very hard to...
+             Level one and two were very hard to recruit because there are so few people with the right skills that want to teach.
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -193,7 +208,7 @@
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
-          </div>-->
+          </div>
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -207,7 +222,7 @@
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
-          </div>
+          </div>-->
 
           
 
