breaks above continue

--- a/app/views/prototypes/itp3/apprentices.html
+++ b/app/views/prototypes/itp3/apprentices.html
@@ -39,14 +39,12 @@
   <ul class="browse-list">
     
       <li class="browse-list-item">
-      
-        
           
           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-      </li><br>
+      </li>
     
   </ul>
-</div>
+</div><br>
 
           <a href="many-vacancies" class="govuk-button show-continue" style="display: inline;">
       Continue
