--- a/app/views/prototypes/itp3/many-vacancies.html
+++ b/app/views/prototypes/itp3/many-vacancies.html
@@ -10,8 +10,9 @@
     <strong class="govuk-tag govuk-phase-banner__content__tag">
       prototype
     </strong>
-    
-  
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
   </p>
 </div>
 
@@ -24,9 +25,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-     
- 
-
+      
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
@@ -37,23 +36,17 @@
         How many teacher vacancies did you have last year?
       </h1>
     </legend><br>
-
-
-  
-  
-  
     <ul class="browse-list">
+    
+      <li class="browse-list-item">
       
-        <li class="browse-list-item">
         
-          
-            
-            <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-        </li><br>
-      
-    </ul>
- 
-
+          <!--<p class="browse-list-item-subtext">
+            Staff who teach or train as the main part of their job</p>-->
+          <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+      </li>
+    
+  </ul>
 </fieldset>
 </div>
 
