--- a/app/views/prototypes/itp3/staff-totals.html
+++ b/app/views/prototypes/itp3/staff-totals.html
@@ -48,7 +48,7 @@ Include part-time staff.
 </div><br>
 
           <a href="teachers" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+      Continue
     </a><br>
        
       </div>
