--- a/app/views/prototypes/itp3/teachers.html
+++ b/app/views/prototypes/itp3/teachers.html
@@ -45,10 +45,10 @@ Include part-time staff.
           <p class="browse-list-item-subtext">
             Staff who teach or train as the main part of their job</p>
           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-      </li><br>
+      </li>
     
   </ul>
-</div>
+</div><br>
 
           <a href="cpd" class="govuk-button show-continue" style="display: inline;">
       Continue
