contect from Oli

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,6 +108,13 @@
 
       <br><br>
 
+      <h2 class="govuk-heading-m">Content changes</h2>
+
+      <p>Flow with form option - <a href="/prototypes/content-changes/details">Begin</a>
+      </p>
+
+      <br><br>
+
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
