--- a/app/views/prototypes/content-changes/vacancies-vocational.html
+++ b/app/views/prototypes/content-changes/vacancies-vocational.html
@@ -39,32 +39,21 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What vocationsl subjects were difficult to find teachers for?
+        What vocational subjects were difficult to find teachers for?
       </h1>
     </legend><br>
-
-
-    <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-  <div class="govuk-accordion__section ">
+    <div class="govuk-form-group">
+      <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading">
+            Vocational
+          </h1>
+        </legend>
+        <div id="waste-hint" class="govuk-hint">
+          Select all that apply.
+        </div>
+     
     
-    
-
-
-
-
-      
-  <div class="govuk-accordion__section ">
-    <div class="govuk-accordion__section-header">
-      <h2 class="govuk-accordion__section-heading">
-        <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
-          Vocational
-        </span>
-      </h2>
-    </div>
-     <span id="sort-code-hint" class="govuk-hint">
-    T levels, apprenticeship programmes
-  </span>
-    <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
       <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
@@ -226,23 +215,16 @@
 
 
     </div>
-    </div>
-  </div>
-
-
-
   
-  
-</div>
-    
 
 
-
-
-    </div>
   </fieldset>
 
 </div>
+<div></div>
+
+
+<br>
 
 
 
