--- a/app/views/prototypes/content-changes/answers-provider.html
+++ b/app/views/prototypes/content-changes/answers-provider.html
@@ -142,7 +142,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Struggled
+             Difficult
             </dt>
             <dd class="govuk-summary-list__value">
               Yes
