--- a/app/views/prototypes/content-changes/qualification-type.html
+++ b/app/views/prototypes/content-changes/qualification-type.html
@@ -39,24 +39,14 @@
       <h1 class="govuk-fieldset__heading">
         What qualification or programmes do they teach?
       </h1>
-    </legend><br>
-
-
-    <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-  <div class="govuk-accordion__section ">
-    <div class="govuk-accordion__section-header">
-      <h2 class="govuk-accordion__section-heading">
-        <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-          Academic qualifications
-        </span>
-      </h2>
-    </div>
+    </legend><br><br>
+    
+      <h2 class="govuk-heading-m">Academic qualifications</h2>
+   
     
     
-    <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
+    
        <div class="govuk-checkboxes">
-
-
 
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
@@ -93,38 +83,20 @@
           Other accredited academic qualifications
         </label>
       </div>
-      <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional">
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="contact-by-email">
-            
-          </label>
-          <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
-        </div>
-
-      </div>
+      
       
     </div>
     </div>
 
     </div>
+  </div><br><br>
 
-    </div>
-  </div>
-
-
-
-
-
-  <div class="govuk-accordion__section ">
-    <div class="govuk-accordion__section-header">
-      <h2 class="govuk-accordion__section-heading">
-        <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
-          Vocational programmes
-        </span>
-      </h2>
-    </div>
     
-    <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
+
+  
+  <h2 class="govuk-heading-m">Vocational programmes</h2>
+   
+   
       <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
@@ -245,18 +217,15 @@
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
 
-      </div>
       
-    </div>
 
-    </div>
-    </div>
-  </div>
+    
+  
  
    
   </fieldset>
+  </div><br><br>
 
-</div>
 
 
           <a href="subject-type" class="govuk-button show-continue" style="display: inline;">
