--- a/app/views/prototypes/content-changes/date.html
+++ b/app/views/prototypes/content-changes/date.html
@@ -35,7 +35,8 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  What date did they start working for your organisation?
+              When did they start working for your organisation?
+
 </h1>
 
   
