--- a/app/views/prototypes/content-changes/highest-subject.html
+++ b/app/views/prototypes/content-changes/highest-subject.html
@@ -37,11 +37,13 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is their highest qualification in their main subject?
+        What is the highest qualification they’ve achieved in their main subject?
+
       </h1>
     </legend><br>
 
-    <p>The subject for which the individual teaches the largest part of their timetable in a standard working week.</p>
+    <p>Tell us about the subject they teach the most in a standard working week.
+    </p>
     
     <div class="govuk-radios">
       
