--- a/app/views/prototypes/content-changes/teaching-qualification.html
+++ b/app/views/prototypes/content-changes/teaching-qualification.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Do they have professional teaching status?
+        What is their professional teaching status?
       </h1>
     </legend><br>
     
