--- a/app/views/prototypes/content-changes/start-staff.html
+++ b/app/views/prototypes/content-changes/start-staff.html
@@ -42,14 +42,14 @@
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
               
-              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="staff-totals">About my organisation</a>
+              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="staff-totals">About your organisation</a>
                   </td>
               <td class="govuk-table__cell" scope="row"> </td>
               <td class="govuk-table__cell"></td>
             </tr>
             <tr class="govuk-table__row">
               
-              <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">My staff</a></td>
+              <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">Your staff</a></td>
               <td class="govuk-table__cell" scope="row">       </td>
               <td class="govuk-table__cell"></td>
             </tr>
