change subjects order

--- a/app/views/prototypes/content-changes/cpd.html
+++ b/app/views/prototypes/content-changes/cpd.html
@@ -29,7 +29,8 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Do you record how much time teachers spend on Continuous Professional Development (CPD)?
+        Do you record how much time your teachers spend on Continuous Professional Development (CPD)?
+
       </h1>
     </legend><br>
     
