--- a/app/views/prototypes/content-changes/filled.html
+++ b/app/views/prototypes/content-changes/filled.html
@@ -36,7 +36,6 @@
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
         Were any subjects difficult to find teachers for?
-
       </h1>
     </legend><br>
 
@@ -72,7 +71,7 @@
 
 
 
-          <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
+          <a href="vacancies-vocational" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
