--- a/app/views/prototypes/content-changes/qualification-type.html
+++ b/app/views/prototypes/content-changes/qualification-type.html
@@ -228,7 +228,7 @@
 
 
 
-          <a href="subject-type" class="govuk-button show-continue" style="display: inline;">
+          <a href="subject-vocational" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
