--- a/app/views/prototypes/content-changes/subject-vocational.html
+++ b/app/views/prototypes/content-changes/subject-vocational.html
@@ -40,11 +40,6 @@
         What vocational subjects do they teach?
       </h1>
     </legend><br>
-
-
-    
-    
-    
     
       <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
@@ -219,7 +214,7 @@
 
 
 
-          <a href="highest-subject" class="govuk-button show-continue" style="display: inline;">
+          <a href="subject-type" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
