--- a/app/views/prototypes/content-changes/vacancies-subject.html
+++ b/app/views/prototypes/content-changes/vacancies-subject.html
@@ -248,7 +248,7 @@
 </div>
     
 
-          <a href="vacancies-vocational.html" class="govuk-button show-continue" style="display: inline;">
+          <a href="explain" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
