--- a/app/views/prototypes/content-changes/vacancies-vocational.html
+++ b/app/views/prototypes/content-changes/vacancies-vocational.html
@@ -226,7 +226,7 @@
 
 <br>
 
-          <a href="explain" class="govuk-button show-continue" style="display: inline;">
+          <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
