--- a/app/views/prototypes/content-changes/subject-type.html
+++ b/app/views/prototypes/content-changes/subject-type.html
@@ -40,11 +40,6 @@
         What academic subjects do they teach?
       </h1>
     </legend><br>
-
-
-   
-   
-    
    
        <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
@@ -240,7 +235,7 @@
 
 </div>
 
-          <a href="subject-vocational" class="govuk-button show-continue" style="display: inline;">
+          <a href="highest-subject" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
