--- a/app/views/prototypes/content-changes/funding.html
+++ b/app/views/prototypes/content-changes/funding.html
@@ -47,13 +47,13 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Yes - in full
+          Yes, we’re paying for all of it
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Yes - in part
+          Yes, we’re paying for some of it
         </label>
       </div>
       <div class="govuk-radios__item">
@@ -65,7 +65,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          Unsure
+          Not sure
         </label>
       </div>
     </div>
