--- a/app/views/prototypes/content-changes/complete-john-four.html
+++ b/app/views/prototypes/content-changes/complete-john-four.html
@@ -73,6 +73,7 @@
                   Contract
                 </a>
               </span>
+              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
             </li>
             
           </ul>
