--- a/app/views/prototypes/content-changes/complete-john-two.html
+++ b/app/views/prototypes/content-changes/complete-john-two.html
@@ -62,6 +62,7 @@
                   Qualifications and programmes
                 </a>
               </span>
+              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
              
             </li>
 
@@ -75,6 +76,7 @@
                   Contract
                 </a>
               </span>
+              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
             </li>
             
           </ul>
