--- a/app/views/index.html
+++ b/app/views/index.html
@@ -115,6 +115,13 @@
 
       <br><br>
 
+      <h2 class="govuk-heading-m">Teachers MVP</h2>
+
+      <p>Teachers only flow - <a href="/prototypes/mvp/details">Start</a>
+      </p>
+
+      <br><br>
+
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
