--- a/app/views/prototypes/mvp/complete-john.html
+++ b/app/views/prototypes/mvp/complete-john.html
@@ -46,15 +46,7 @@
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
             </li>
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="role" aria-describedby="read-declaration-completed">
-                  Working in FE
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
-              
-            </li>
+            
           
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
@@ -72,7 +64,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="what-contract">
+                <a href="how-long-role">
                   Contract
                 </a>
               </span>
