--- a/app/views/prototypes/mvp/many-vacancies-filled.html
+++ b/app/views/prototypes/mvp/many-vacancies-filled.html
@@ -56,7 +56,7 @@
 
 
 
-          <a href="filled" class="govuk-button show-continue" style="display: inline;">
+          <a href="how-long" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
