--- a/app/views/prototypes/mvp/staff-totals.html
+++ b/app/views/prototypes/mvp/staff-totals.html
@@ -36,15 +36,45 @@
 
 
 
-<form action="/form-handler" method="post" novalidate>
-  <div class="govuk-form-group">
+<ul class="browse-list">
     
-    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" (£)>
-  </div>
+  <li class="browse-list-item">
+   <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Managers</h2>
+    <p class="browse-list-item-subtext">
+        Senior and middle managers, principals, vice-principals, working directors, CEOs</p>
+      <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+  </li><br>
 
-  
-</form>
-</div><br>
+  <li class="browse-list-item">
+    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Teachers</h2>
+    
+    
+      <p class="browse-list-item-subtext">
+        Staff who teach or train as the main part of their job</p>
+      <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+  </li><br>
+
+  <li class="browse-list-item">
+    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Teaching support</h2>
+
+    <p class="browse-list-item-subtext">
+        Mentors, assessors, technicians, teaching assistants or anyone in a learning support role
+      </p>
+       <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+    
+  </li><br>
+
+  <li class="browse-list-item">
+    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Administration support</h2>
+
+    <p class="browse-list-item-subtext">
+        Lorum lorum la la
+      </p>
+       <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+    
+  </li>
+
+</ul><br>
 
           <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
       Continue
