--- a/app/views/prototypes/mvp/how-long-education.html
+++ b/app/views/prototypes/mvp/how-long-education.html
@@ -94,7 +94,7 @@
 <br>
 
 
-          <a href="complete-john-two" class="govuk-button show-continue" style="display: inline;">
+          <a href="what-contract" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
